--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-konva": "^18.2.10"
+    "react-konva": "^18.2.10",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
