--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "canvas": "^3.0.0-rc3",
+    "canvas": "^3.1.2",
     "jspdf": "^3.0.1",
-    "konva": "^9.2.0",
+    "konva": "^9.3.22",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-konva": "^18.2.10",
+    "react-konva": "^19.0.7",
     "zod": "^3.25.76"
   },
   "devDependencies": {
